[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-red-black-trees"
version = "0.0.1"
authors = [
  { name="Emily Dolson", email="me@me.com" },
]
description = "Red-black tree implementation in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emilydolson/python-red-black-trees"
"Bug Tracker" = "https://github.com/emilydolson/python-red-black-trees/issues"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]
